src/tests/cases/snapshots/ui__basic_only_processes.snap
---
source: src/tests/cases/ui.rs
expression: "&terminal_draw_events_mirror[0]"
---
 Total Up / Down: 0Bps / 0Bps                                                                                                                                                                 
┌Utilization by process name─────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┐
│Process                                                                       Connections                                       Up / Down                                                   │
│                                                                                                                                                                                            │
│                                                                                                                                                                                            │
│                                                                                                                                                                                            │
│                                                                                                                                                                                            │
│                                                                                                                                                                                            │
│                                                                                                                                                                                            │
│                                                                                                                                                                                            │
│                                                                                                                                                                                            │
│                                                                                                                                                                                            │
│                                                                                                                                                                                            │
│                                                                                                                                                                                            │
│                                                                                                                                                                                            │
│                                                                                                                                                                                            │
│                                                                                                                                                                                            │
│                                                                                                                                                                                            │
│                                                                                                                                                                                            │
│                                                                                                                                                                                            │
│                                                                                                                                                                                            │
│                                                                                                                                                                                            │
│                                                                                                                                                                                            │
│                                                                                                                                                                                            │
│                                                                                                                                                                                            │
│                                                                                                                                                                                            │
│                                                                                                                                                                                            │
│                                                                                                                                                                                            │
│                                                                                                                                                                                            │
│                                                                                                                                                                                            │
│                                                                                                                                                                                            │
│                                                                                                                                                                                            │
│                                                                                                                                                                                            │
│                                                                                                                                                                                            │
│                                                                                                                                                                                            │
│                                                                                                                                                                                            │
│                                                                                                                                                                                            │
│                                                                                                                                                                                            │
│                                                                                                                                                                                            │
│                                                                                                                                                                                            │
│                                                                                                                                                                                            │
│                                                                                                                                                                                            │
│                                                                                                                                                                                            │
│                                                                                                                                                                                            │
│                                                                                                                                                                                            │
│                                                                                                                                                                                            │
│                                                                                                                                                                                            │
│                                                                                                                                                                                            │
└────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘
 Press <SPACE> to pause. (DNS queries hidden). Use <TAB> to rearrange tables.                                                                                                                 

